Signed-off-by: jl2286716 <jleduc@student.rcc.edu>

--- a/Class/TruthTableJS.html
+++ b/Class/TruthTableJS.html
@@ -7,7 +7,17 @@
     
     <body>
     	<h1>Truth Table</h1>
-		<table width="200" border="1">
+		<table width="100%" border="1">
+			<tr>
+				<th colspan="2"></th>
+				<th colspan="2">NOT</th>
+				<th>AND</th>
+				<th>OR</th>
+				<th>XOR</th>
+				<th>Y</th>
+				<th>X</th>
+				<th colspan="4">DeMORGAN'S LAW</th>
+			</tr>
 			<tr>
 				<th>X</th>
 				<th>Y</th>
